--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -1,9 +1,16 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:Ceriyo.Toolset" x:Class="Ceriyo.Toolset.MainWindow"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:local="clr-namespace:Ceriyo.Toolset" xmlns:MenuBar="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.MainWindow"
+    Title="MainWindow" Height="600" Width="800">
     <Grid>
-        <local:FlatRedBallControl HorizontalAlignment="Left" Height="100" Margin="215,88,0,0" VerticalAlignment="Top" Width="100" x:Name="flatRedBallControl"/>
+        <DockPanel>
+
+            <MenuBar:MenuBarComponent VerticalAlignment="Top"/>
+            
+
+        </DockPanel>
+        <!--<local:FlatRedBallControl HorizontalAlignment="Left" Height="120" Margin="195,88,0,0" VerticalAlignment="Top" Width="120" x:Name="flatRedBallControl"/>-->
+
     </Grid>
 </Window>
