Create module / open module

--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -6,7 +6,7 @@
     <Grid>
         <DockPanel>
 
-            <MenuBar:MenuBarComponent VerticalAlignment="Top"/>
+            <MenuBar:MenuBarComponent x:Name="menuBar" VerticalAlignment="Top"/>
             
 
         </DockPanel>
