--- a/Ceriyo.Toolset/Components/MenuBarComponent.xaml
+++ b/Ceriyo.Toolset/Components/MenuBarComponent.xaml
@@ -9,7 +9,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="New Module" Click="NewModule_Click"></MenuItem>
-                <MenuItem Header="Open Module"></MenuItem>
+                <MenuItem Header="Open Module" Click="MenuItem_Click"></MenuItem>
                 <MenuItem Header="Close Module"></MenuItem>
                 <MenuItem Header="Save"></MenuItem>
                 <MenuItem Header="Save As..."></MenuItem>
