Move Map.cs code to Area.cs

--- a/Ceriyo.Toolset/Components/AreaSelectionControl.xaml
+++ b/Ceriyo.Toolset/Components/AreaSelectionControl.xaml
@@ -6,8 +6,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <ListBox Name="lbAreas"
-                 ItemsSource="{Binding Areas}">
-        </ListBox>
+        <DockPanel>
+            <ListBox Name="lbAreas" Width="Auto" Height="Auto">
+            </ListBox>
+        </DockPanel>
     </Grid>
 </UserControl>
