--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -2,14 +2,53 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Ceriyo.Toolset" xmlns:MenuBar="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.MainWindow"
-    Title="MainWindow" Height="600" Width="800">
+    Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800">
     <Grid>
-        <DockPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
 
-            <MenuBar:MenuBarComponent x:Name="menuBar" VerticalAlignment="Top"/>
-            
+        </Grid.RowDefinitions>
+        <DockPanel Grid.ColumnSpan="4">
+            <MenuBar:MenuBarComponent x:Name="menuBar" VerticalAlignment="Top" DockPanel.Dock="Top"/>
+        </DockPanel>
+        <MenuBar:AreaSelectionControl 
+            x:Name="areaSelection" 
+            HorizontalAlignment="Left" 
+            Margin="10,42,0,1" 
+            VerticalAlignment="Stretch" 
+            Width="178"
+            Grid.Column="0"
+            Grid.Row="1"
+            />
+        <Label
+            Content="Areas:" Margin="10,10,127,141" Grid.Row="1"/>
+        <Label
+        	Content="Conversations:" Margin="10,10,97,141" Grid.Row="2"/>
+        <Label
+        	Content="Scripts:" Margin="10,10,127,141" Grid.Row="3"/>
+
+        <DockPanel
+            Grid.Column="1"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3">
+            <local:FlatRedBallControl 
+                x:Name="gameControl"
+                Height="Auto"
+                Width="Auto"/>
+
 
         </DockPanel>
+
         <!--<local:FlatRedBallControl HorizontalAlignment="Left" Height="120" Margin="195,88,0,0" VerticalAlignment="Top" Width="120" x:Name="flatRedBallControl"/>-->
 
     </Grid>
