--- a/Ceriyo.Toolset/Components/AreaSelectionControl.xaml
+++ b/Ceriyo.Toolset/Components/AreaSelectionControl.xaml
@@ -4,11 +4,54 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Background="White">
     <Grid>
-        <DockPanel>
-            <ListBox Name="lbAreas" Width="Auto" Height="Auto" ItemsSource="{Binding Areas}" DisplayMemberPath="Name">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        
+        <DockPanel Grid.Row="1"
+                   Grid.Column="0"
+                   Grid.ColumnSpan="2">
+            <ListBox Name="lbAreas" ItemsSource="{Binding Areas}" DisplayMemberPath="Name">
             </ListBox>
         </DockPanel>
+        
+        <Label Grid.Row="0" Grid.Column="0" Content="Areas:">
+        </Label>
+
+        <Button 
+            Name="btnCreate"
+            Content="New"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            Grid.Row="0" 
+            Margin="25,10,0,5"
+            Click="btnCreate_Click">
+        </Button>
+        <Button 
+            Name="btnOpen"
+            Content="Open"
+            Grid.Column="1"
+            Grid.Row="0" 
+            HorizontalAlignment="Left"
+            Margin="60,10,0,5"
+            Click="btnOpen_Click">
+        </Button>
+        <Button 
+            Name="btnDelete"
+            Content="Delete"
+            Grid.Column="1"
+            Grid.Row="0" 
+            HorizontalAlignment="Left"
+            Margin="100,10,0,5" RenderTransformOrigin="1.525,0.76"
+            Click="btnDelete_Click">
+        </Button>
     </Grid>
 </UserControl>
