--- a/Ceriyo.Toolset/Components/AreaSelectionControl.xaml
+++ b/Ceriyo.Toolset/Components/AreaSelectionControl.xaml
@@ -19,7 +19,7 @@
         <DockPanel Grid.Row="1"
                    Grid.Column="0"
                    Grid.ColumnSpan="2">
-            <ListBox Name="lbAreas" ItemsSource="{Binding Areas}" DisplayMemberPath="Name">
+            <ListBox Name="lbAreas" ItemsSource="{Binding Areas}" DisplayMemberPath="Name" SelectionMode="Single" MouseDoubleClick="lbAreas_MouseDoubleClick">
             </ListBox>
         </DockPanel>
         
