--- a/Ceriyo.Toolset/Windows/EditAreaWindow.xaml
+++ b/Ceriyo.Toolset/Windows/EditAreaWindow.xaml
@@ -210,18 +210,20 @@
                 </TabItem>
             </TabControl>
         </DockPanel>
-        <Button Content="Save" 
+        <Button Name="btnSave"
+                Content="Save" 
                 HorizontalAlignment="Left" 
                 Margin="118,8,0,0" 
                 Grid.Row="1" 
                 VerticalAlignment="Top" 
-                Width="75"/>
-        <Button Content="Cancel" 
+                Width="75" Click="btnSave_Click"/>
+        <Button Name="btnCancel"
+                Content="Cancel" 
                 HorizontalAlignment="Left" 
                 Margin="198,8,0,0" 
                 Grid.Row="1" 
                 VerticalAlignment="Top" 
-                Width="75" Click="Button_Click"/>
+                Width="75" Click="btnCancel_Click"/>
 
     </Grid>
 </Window>
