--- a/Ceriyo.Toolset/Components/MenuBarComponent.xaml
+++ b/Ceriyo.Toolset/Components/MenuBarComponent.xaml
@@ -15,7 +15,7 @@
                 <MenuItem Header="Save As..."></MenuItem>
                 <MenuItem Header="Import"></MenuItem>
                 <MenuItem Header="Export"></MenuItem>
-                <MenuItem Header="Exit"></MenuItem>
+                <MenuItem Name="miExit" Header="Exit" Click="miExit_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="Edit">
                 <MenuItem Header="Undo"></MenuItem>
