--- a/Ceriyo.Toolset/Windows/EditAreaWindow.xaml
+++ b/Ceriyo.Toolset/Windows/EditAreaWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:val="clr-namespace:Ceriyo.Toolset.ValidationRules"
         xmlns:eng="clr-namespace:Ceriyo.Data"
         xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid" x:Class="Ceriyo.Toolset.Windows.EditAreaWindow"
-        Title="Area Properties" Height="500" Width="400" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterOwner">
+        Title="Area Properties" Height="500" Width="400" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterOwner"
+        Closing="Window_Closing">
     <Grid>
 
         <Grid.RowDefinitions>
