--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -85,7 +85,15 @@
             Height="Auto"
             />
         
-        <!--<local:FlatRedBallControl HorizontalAlignment="Left" Height="120" Margin="195,88,0,0" VerticalAlignment="Top" Width="120" x:Name="flatRedBallControl"/>-->
-
+        <Comp:ScriptSelectionControl
+            x:Name="scriptSelection"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Grid.Row="3"
+            Grid.Column="0"
+            Width="Auto"
+            Height="Auto"
+            />
+        
     </Grid>
 </Window>
