--- a/Ceriyo.Toolset/Components/PaintObjectsControl.xaml
+++ b/Ceriyo.Toolset/Components/PaintObjectsControl.xaml
@@ -4,8 +4,46 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Background="White">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        
+        
+        <DockPanel>
+            <TabControl>
+                <TabItem Header="Tiles">
+                    
+                </TabItem>
+                <TabItem Header="Creatures">
+
+                    <ListBox Name="lbCreatures"
+                             Height="Auto" 
+                             Width="Auto"
+                             ItemsSource="{Binding Creatures}"
+                             VerticalAlignment="Stretch"
+                             HorizontalAlignment="Stretch"/>
+                </TabItem>
+                <TabItem Header="Items">
+
+                    <ListBox Name="lbItems"
+                             Height="Auto" 
+                             Width="Auto"
+                             ItemsSource="{Binding Items}"
+                             VerticalAlignment="Stretch"
+                             HorizontalAlignment="Stretch"/>
+                </TabItem>
+                <TabItem Header="Placeables">
+
+                    <ListBox Name="lbPlaceables"
+                             Height="Auto" 
+                             Width="Auto"
+                             ItemsSource="{Binding Placeables}"
+                             VerticalAlignment="Stretch"
+                             HorizontalAlignment="Stretch"/>
+                </TabItem>
+            </TabControl>
+        </DockPanel>
     </Grid>
 </UserControl>
