--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -18,6 +18,8 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
 
         </Grid.RowDefinitions>
         <DockPanel Grid.ColumnSpan="6">
@@ -31,7 +33,7 @@
         <GridSplitter
             Grid.Column="1"
             Grid.Row="1"
-            Grid.RowSpan="3"
+            Grid.RowSpan="5"
             Width="5"
             HorizontalAlignment="Left"
             VerticalAlignment="Stretch"
@@ -43,7 +45,7 @@
         <GridSplitter
             Grid.Column="4"
             Grid.Row="1"
-            Grid.RowSpan="3"
+            Grid.RowSpan="5"
             Width="5"
             HorizontalAlignment="Left"
             VerticalAlignment="Stretch"
@@ -56,7 +58,7 @@
             Grid.Column="2"
             Grid.Row="1"
             Grid.ColumnSpan="2"
-            Grid.RowSpan="3">
+            Grid.RowSpan="4">
             <local:FlatRedBallControl 
                 x:Name="gameControl"
                 Height="Auto"
@@ -85,7 +87,7 @@
             Height="Auto"
             />
         
-        <Comp:ScriptSelectionControl
+        <Comp:ScriptSelectionControl 
             x:Name="scriptSelection"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
@@ -94,6 +96,20 @@
             Width="Auto"
             Height="Auto"
             />
-        
+        <Comp:PaintObjectsControl x:Name="paintObjects"
+            Grid.Column="5" 
+            HorizontalAlignment="Stretch" 
+            Grid.Row="3" 
+            Grid.RowSpan="2"
+            VerticalAlignment="Stretch"/>
+        <Comp:ObjectSelectionComponent x:Name="objectSelection"
+            Grid.Column="5" 
+            HorizontalAlignment="Stretch" 
+            Grid.Row="1" 
+            Grid.RowSpan="2" 
+            VerticalAlignment="Stretch" 
+            Height="Auto"
+            Width="Auto"/>
+
     </Grid>
 </Window>
